# librarian-runtime-node

./: .gitignore  README.md  ROUTER-RUST-CORE-1-CLOSEOUT.md  ROUTER-RUST-HARDEN-1-CLOSEOUT.md  SESSION-HANDOFF.md  WIN-RUNTIME-QUALIFICATION-1-CLOSEOUT.md  WIN-RUST-SERVICE-SWAP-1-CLOSEOUT.md
config/: context_reuse_simulator.default.json  docker-compose.example.yml  mcp-permissions.json  measured_hardware_profiles.json  model-profiles.json  model-profiles.local.example.json  model_manager.local.example.ps1  router_workload_optimizer.default.json  runtime-node.example.json
project-state/: sprint-ledger.json
reports/: MAC-WIN-CONTEXT-REUSE-SIMULATOR-0.md  MAC-WIN-ROUTER-CONTEXT-CONTRACT-0.md  MAC-WIN-ROUTER-CONTEXT-MEASURE-1.md  MAC-WIN-ROUTER-CONTEXT-PROTOTYPE-1.md  MAC-WIN-ROUTER-CONTEXT-RUNTIME-CONTRACT-1.md  MAC-WIN-ROUTER-CONTEXT-RUNTIME-DESIGN-1.md  MAC-WIN-ROUTER-WORKLOAD-OPTIMIZER-1.md  WIN-RUNTIME-DRY-RUN-READINESS-1.md  WIN-STARTUP-FILES-CUSTODY-0.md  context-reuse-simulator-results.json  router-context-measure-results.json  router-context-prototype-decisions.json  startup-files-custody-inventory.json  win-runtime-dry-run-readiness-1.json
router/: router.py
runtime/: model_manager.ps1
rust-router/: Cargo.toml
rust-router/src/: config.rs  evidence.rs  lib.rs  main.rs  process.rs  refusal.rs  server.rs
rust-router/tests/: integration_test.rs
scripts/: check-mcp-health.ps1  check-model-registry.ps1  collect-inventory.ps1  health-check.ps1  list-models.ps1  mcp-bridge.ps1  run-integration-proof-v2.ps1  run-model-fit-matrix.ps1  start-phi4.example.ps1  (+25 more)
(+184 files in other folders)
